--- a/PhotoDicer/PhotoDicer/Base.lproj/Main.storyboard
+++ b/PhotoDicer/PhotoDicer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3yZ-Np-7gy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PhotoDicer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="PhotoDicer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xzt-3M-J8G">
-                                <rect key="frame" x="51" y="263.5" width="273" height="50"/>
+                                <rect key="frame" x="51" y="93" width="273" height="50"/>
                                 <color key="backgroundColor" red="0.20271658270000001" green="0.57045182110000003" blue="0.84321732949999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="iQa-fl-Bv8"/>
@@ -36,7 +36,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v4R-wW-VK5">
-                                <rect key="frame" x="51" y="353" width="273" height="50"/>
+                                <rect key="frame" x="51" y="178" width="273" height="50"/>
                                 <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="VwO-NK-b0J"/>
@@ -49,7 +49,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoDicer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9pO-49-Orx">
-                                <rect key="frame" x="125" y="163.5" width="124" height="30"/>
+                                <rect key="frame" x="125" y="28" width="124" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="124" id="3g4-fZ-jt9"/>
                                     <constraint firstAttribute="height" constant="30" id="RMY-At-WJB"/>
@@ -61,24 +61,44 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="v4R-wW-VK5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="44.5" id="KSg-py-sg1"/>
-                            <constraint firstItem="v4R-wW-VK5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="Ock-Bo-3Ax"/>
-                            <constraint firstItem="xzt-3M-J8G" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-45" id="Qnb-EU-iGh"/>
-                            <constraint firstItem="v4R-wW-VK5" firstAttribute="top" secondItem="xzt-3M-J8G" secondAttribute="bottom" constant="39.5" id="RMk-Au-Hxk"/>
-                            <constraint firstItem="9pO-49-Orx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a3y-JG-5gn"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="v4R-wW-VK5" secondAttribute="trailing" constant="35" id="aXg-fq-3LV"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xzt-3M-J8G" secondAttribute="trailing" constant="35" id="fOH-et-4dL"/>
-                            <constraint firstItem="xzt-3M-J8G" firstAttribute="top" secondItem="9pO-49-Orx" secondAttribute="bottom" constant="70" id="g6v-Wf-JqM"/>
-                            <constraint firstItem="xzt-3M-J8G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="lC1-fd-3ah"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="v4R-wW-VK5" secondAttribute="trailing" constant="35" id="2c4-PC-DKv"/>
+                            <constraint firstItem="9pO-49-Orx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LHn-qy-per"/>
+                            <constraint firstItem="v4R-wW-VK5" firstAttribute="top" secondItem="xzt-3M-J8G" secondAttribute="bottom" constant="35" id="RMk-Au-Hxk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xzt-3M-J8G" secondAttribute="trailing" constant="35" id="bqW-8y-T35"/>
+                            <constraint firstItem="xzt-3M-J8G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="eNM-0w-rbb"/>
+                            <constraint firstItem="xzt-3M-J8G" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fDi-E0-5Hv"/>
+                            <constraint firstItem="xzt-3M-J8G" firstAttribute="top" secondItem="9pO-49-Orx" secondAttribute="bottom" constant="35" id="g6v-Wf-JqM"/>
+                            <constraint firstItem="v4R-wW-VK5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="35" id="mMJ-HD-Mdm"/>
+                            <constraint firstItem="9pO-49-Orx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="uj5-90-qiD"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="pvS-E7-70n"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="topLabel" destination="9pO-49-Orx" id="ogY-aG-7Ox"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
+            <point key="canvasLocation" x="972" y="-90"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ShG-43-JIL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3yZ-Np-7gy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QmV-FH-nzR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="QCu-FO-md4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cfb-w9-k2r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="279" y="-36"/>
         </scene>
     </scenes>
 </document>
